challenge15/flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: wiame1306/my-flask-app:v5
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
