challenge15/flask-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdb2
  template:
    metadata:
      labels:
        app: webdb2
    spec:
      containers:
      - name: webdb2
        image: wiame1306/my-flask-app:v5
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb2-service
spec:
  selector:
    app: webdb2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
